This commit refs #541, move hamming algo in a file, update diff algorithm and comments

--- a/libs/modules/analysis/diff/Makefile
+++ b/libs/modules/analysis/diff/Makefile
@@ -17,6 +17,7 @@ NAME =		my_diff
 SRCS =		main.c \
 		diff.c \
 		filter.c \
+		hamming_distance.c \
 		./../levenshtein/levenshtein.c
 
 OBJS =		$(SRCS:.c=.o)
