This commit rfs #611 Add fdup algorithm && update fdf module

--- a/libs/modules/analysis/Makefile
+++ b/libs/modules/analysis/Makefile
@@ -12,6 +12,8 @@ LIB_NAME =	./libs/algorithms.so
 SRCS	 =	./levenshtein/levenshtein.c \
 		./rsync/compare/compare_files_match.c \
 		./rsync/message_digest/cp_md5.c \
+		./fdupes/fdupes_algo.c \
+		./fdupes/md5/md5.c \
 
 LIB_DIRECTORY =	./libs
 
