This commit refs #811, basic implementation of the new Framework code architecture.

--- a/config/framework/default.yml
+++ b/config/framework/default.yml
@@ -3,4 +3,4 @@ modules:
         dir: "./modules/graphics/"
         default: "default.rb"
     analysis:
-        dir: ""
+        dir: "./modules/analysis/"
