This commit refs #811, add set_opts/show_opts/use/run commands and console_mode module code restructuration

--- a/config/framework/default.yml
+++ b/config/framework/default.yml
@@ -1,6 +1,6 @@
 modules:
     graphics:
-        dir: "./modules/graphics/"
-        default: "default.rb"
+        dir: "/modules/graphics/"
+        default: "console_mode/console_mode.rb"
     analysis:
-        dir: "./modules/analysis/"
+        dir: "/modules/analysis/"
