--- a/libs/modules/analysis/Makefile
+++ b/libs/modules/analysis/Makefile
@@ -15,10 +15,10 @@ SRCS	 =	./levenshtein/levenshtein.c \
 		./fdupes/fdupes_algo.c \
 		./fdupes/md5/md5.c \
 		./hamming_distance/hamming_distance.c \
-		./diff/diff.c \
-		./diff/filter.c \
-		./diff/compare.c \
-		./diff/file_handler.c \
+		./fslice/fslice.c \
+		./fslice/file_handler.c \
+		./fslice/filter.c \
+		./fslice/compare.c \
 
 LIB_DIRECTORY =	./libs
 
