This commmit ref #851 - modify CopyPeste so it can run on OpenBSD

--- a/lib/algorithms/Makefile
+++ b/lib/algorithms/Makefile
@@ -23,11 +23,10 @@ SRCS	 =	./levenshtein/levenshtein.c \
 		./diff/compare.c \
 
 ##
-## complation flags
+## compilation flags
 ##
 CFLAGS +=	-Wextra -Wall -Werror
 CFLAGS +=	-pedantic -std=gnu99
-CFLAGS +=	-fmax-errors=2
 
 CFLAGS +=	-I./rsync/includes \
 		-I./rsync/message_digest \
@@ -35,6 +34,11 @@ CFLAGS +=	-I./rsync/includes \
 		-I./rsync/errno_copypeste \
 
 CFLAGS +=	-lcrypto # MD5
+
+##
+## Optimisation flag
+##
+CFLAGS	+=	-O2
 
 all:		$(LIB_NAME)
 
