--- a/public/modules/analysis/config_files/comments_by_ext.yml
+++ b/public/modules/analysis/config_files/comments_by_ext.yml
@@ -2,21 +2,40 @@
 comments:
    h:
       - "/*"
+      - "**"
       - "*/"
+      - "//"
    rb:
       - "#"
    irb:
       - "#"
    hh:
       - "/*"
+      - "**"
       - "*/"
+      - "//"
    hpp:
       - "/*"
+      - "**"
       - "*/"
+      - "//"
    c:
       - "/*"
+      - "**"
       - "*/"
+      - "//"
    cpp:
       - "/*"
-      - "//"
+      - "**"
       - "*/"
+      - "//"
+   js:
+      - "/*"
+      - "*/"
+      - "//"
+   html:
+      - "<!--"
+      - "-->"
+   py:
+      - "#"
+
