This commit ref #-1 - Finish to integrate filter system in the FDF

--- a/public/modules/analysis/config_files/ignored.yml
+++ b/public/modules/analysis/config_files/ignored.yml
@@ -4,8 +4,9 @@ ignored:
       - GemFile
       - Rakefile
       - ".gitignore"
-      - elem2
+      - Makefile.in
    extensions:
       - ".trash"
       - ".old"
       - ".elem4"
+      - ".build"
