--- a/lib/algorithms/Makefile
+++ b/lib/algorithms/Makefile
@@ -15,10 +15,8 @@ SRCS	 =	./levenshtein/levenshtein.c \
 		./fdupes/fdupes_algo.c \
 		./fdupes/md5/md5.c \
 		./hamming_distance/hamming_distance.c \
-		./fslice/fslice.c \
-		./fslice/file_handler.c \
-		./fslice/filter.c \
-		./fslice/compare.c \
+		./diff/file_handler.c \
+		./diff/filter.c \
 		./diff/diff.c \
 		./diff/compare.c \
 
