File 'initializers.rb' now used. Load Mongoid and models from it. Analysis modules now receive (when ran) the record they have to work on.

--- a/mongoid.yml
+++ b/mongoid.yml
@@ -1,6 +1,6 @@
 development:
   clients:
     default:
-      database: CopyPeste500
+      database: CopyPeste
       hosts:
         - localhost:27017
