This ref to #831, remove library and fix problem algorithm in filter

--- a/lib/algorithms/Makefile
+++ b/lib/algorithms/Makefile
@@ -9,14 +9,19 @@ MKDIR	=	mkdir -p
 ## compilation paths
 ##
 LIB_NAME =	algorithms.so
-LIB =		./library/cp_library.so
 
-SRCS	 =	./levenshtein/levenshtein.c \
+SRCS	 =	\
+		./library/sources/file/filter.c \
+		./library/sources/file/file_handler.c \
+		./library/sources/tools/compare.c \
+\
+		./levenshtein/levenshtein.c \
 		./rsync/rsync.c \
 		./fdupes/fdupes_algo.c \
 		./fdupes/md5/md5.c \
 		./hamming_distance/hamming_distance.c \
 		./diff/diff.c \
+
 
 ##
 ## compilation flags
@@ -30,6 +35,7 @@ CFLAGS +=	-I./rsync/includes \
 		-I./rsync/errno_copypeste \
 		-I./library/includes/tools \
 		-I./library/includes/file \
+		-I./diff \
 
 CFLAGS +=	-lcrypto # MD5
 
@@ -38,17 +44,13 @@ CFLAGS +=	-lcrypto # MD5
 ##
 CFLAGS	+=	-O2
 
-all:		$(LIB) $(LIB_NAME)
+all:		$(LIB_NAME)
 
 $(LIB_NAME):	$(OBJS)
 		$(CC) -o $(LIB_NAME) $(LIB) -shared -fPIC $(SRCS) $(CFLAGS)
 
-$(LIB):
-		make -C ./library
-
 clean:
 		$(RM) $(LIB_NAME)
-		$(RM) $(LIB)
 
 re:		clean all
 
