Regex to escape comments

--- a/public/modules/analysis/fdf/config_files/comments_by_ext.yml
+++ b/public/modules/analysis/fdf/config_files/comments_by_ext.yml
@@ -1,41 +1,16 @@
 ---
 comments:
-   h:
-      - "/*"
-      - "**"
-      - "*/"
-      - "//"
-   rb:
-      - "#"
-   irb:
-      - "#"
-   hh:
-      - "/*"
-      - "**"
-      - "*/"
-      - "//"
-   hpp:
-      - "/*"
-      - "**"
-      - "*/"
-      - "//"
-   c:
-      - "/*"
-      - "**"
-      - "*/"
-      - "//"
-   cpp:
-      - "/*"
-      - "**"
-      - "*/"
-      - "//"
-   js:
-      - "/*"
-      - "*/"
-      - "//"
-   html:
-      - "<!--"
-      - "-->"
-   py:
-      - "#"
-
+   .h:
+      - (\/\*/([^*]|[\r\n]|/(\*+/([^*\/]|[\r\n])/)/)/*\*+\/)/|/(\/\/.*)
+   .rb:
+      - (#.*)
+   .hh:
+      - (\/\*/([^*]|[\r\n]|/(\*+/([^*\/]|[\r\n])/)/)/*\*+\/)/|/(\/\/.*)
+   .hpp:
+      - (\/\*/([^*]|[\r\n]|/(\*+/([^*\/]|[\r\n])/)/)/*\*+\/)/|/(\/\/.*)
+   .c:
+      - (\/\*/([^*]|[\r\n]|/(\*+/([^*\/]|[\r\n])/)/)/*\*+\/)/|/(\/\/.*)
+   .cpp:
+      - (\/\*/([^*]|[\r\n]|/(\*+/([^*\/]|[\r\n])/)/)/*\*+\/)/|/(\/\/.*)
+   .html:
+      - (<!--[\s\S]*?-->)
