This commit ref #984 - Similarity of 100 or 0 while  using fdupes

--- a/public/modules/analysis/fdf/config_files/ignored.yml
+++ b/public/modules/analysis/fdf/config_files/ignored.yml
@@ -5,6 +5,7 @@ ignored:
       - Rakefile
       - ".gitignore"
       - Makefile.in
+      - Makefile
    extensions:
       - ".trash"
       - ".old"
