This commit ref #984 - Working FDF V2 with processes

--- a/public/modules/analysis/fdf/config_files/ignored.yml
+++ b/public/modules/analysis/fdf/config_files/ignored.yml
@@ -1,18 +1,26 @@
 ---
 ignored:
    files:
-      - ".gitignore"
+      - .gitignore
       - GemFile
+      - LICENSE
       - Makefile
-      - Rakefile
       - Makefile.in
+      - Rakefile
+      - Readme
+      - Readme.md
+      - Readme.txt
    extensions:
       - build
       - elem4
+      - ftl
+      - gemspec
       - gz
       - lock
+      - log
       - o
       - old
+      - prop
       - ri
       - so
       - tar
