This commit ref #984 - reduce number of processed documents

--- a/public/modules/analysis/fdf/config_files/ignored.yml
+++ b/public/modules/analysis/fdf/config_files/ignored.yml
@@ -12,16 +12,23 @@ ignored:
       - Readme.txt
    extensions:
       - build
+      - dll
       - elem4
       - ftl
+      - gen
       - gemspec
       - gz
+      - jar
+      - localstorage
       - lock
       - log
+      - mo
       - o
       - old
+      - png
       - prop
       - ri
+      - RSA
       - so
       - tar
       - trash
