--- a/copy_peste.yml
+++ b/copy_peste.yml
@@ -2,4 +2,4 @@ environment: "development"
 modules:
     graphics:
         default: "console_mode/console_mode.rb"
-port_tree_path: "~/Projets/EIP/CopyPeste"
+port_tree_path: "./"
