Several bug fix and requested PR modifications

--- a/copy_peste.yml
+++ b/copy_peste.yml
@@ -10,4 +10,4 @@ production:
   modules:
       graphics:
           default: "console_mode"
-  ports_tree_path: "/"
+  ports_tree_path: "/usr/ports/"
