--- a/mongoid.yml
+++ b/mongoid.yml
@@ -4,3 +4,10 @@ development:
       database: CopyPeste
       hosts:
         - localhost:27017
+
+production:
+  clients:
+    default:
+      database: CopyPeste
+      hosts:
+        - localhost:27017
