Fix bug before merge

--- a/copy_peste.yml
+++ b/copy_peste.yml
@@ -3,7 +3,7 @@ development:
   modules:
       graphics:
           default: "console_mode"
-  ports_tree_path: "./"
+  ports_tree_path: "../"
 
 production:
   modules:
